# frontiers23

./: .gitignore  LICENSE.md  README.md
AlgorithmABC/: ABC.cpp  ABC.h  CMakeLists.txt  ThreadPool.hpp  benchmark.hpp  main.cpp  model.cpp  model.h  results.json
data/: GDPPerCapita.csv  countries_list.txt  countries_population.txt  households.txt
data/dead/: dead_AR.txt  dead_AT.txt  dead_BD.txt  dead_BE.txt  dead_BG.txt  dead_BO.txt  dead_CA.txt  dead_CH.txt  dead_CL.txt  dead_CO.txt  dead_DE.txt  dead_EG.txt  dead_ES.txt  dead_FR.txt  dead_GB.txt  dead_GR.txt  dead_GT.txt  dead_HN.txt  dead_HU.txt  dead_ID.txt  dead_IE.txt  dead_IL.txt  dead_IQ.txt  dead_IT.txt  dead_KW.txt  dead_LU.txt  dead_MA.txt  dead_MX.txt  dead_MY.txt  dead_NG.txt  dead_PA.txt  dead_PH.txt  dead_PK.txt  dead_PL.txt  dead_PT.txt  dead_RO.txt  dead_RU.txt  dead_SA.txt  dead_TR.txt  dead_UA.txt  (+2 more)
data/k_average/: k_active.txt  k_passive.txt
data/mobility/: mobility_AR.txt  mobility_AT.txt  mobility_BD.txt  mobility_BE.txt  mobility_BG.txt  mobility_BO.txt  mobility_CA.txt  mobility_CH.txt  mobility_CL.txt  mobility_CO.txt  mobility_DE.txt  mobility_EG.txt  mobility_ES.txt  mobility_FR.txt  mobility_GB.txt  mobility_GR.txt  mobility_GT.txt  mobility_HN.txt  mobility_HU.txt  mobility_ID.txt  mobility_IE.txt  mobility_IL.txt  mobility_IQ.txt  mobility_IT.txt  mobility_KW.txt  mobility_LU.txt  mobility_MA.txt  mobility_MX.txt  (+14 more)
notebooks/: data_process.ipynb  examples.ipynb  fits_plots.ipynb  general_plots.ipynb  pd_mins.csv
raw_data/: GDPPerCapita.csv  countries_population.csv  households.csv
(+85 files in other folders)
